fix(puzzle): do not collapse spaces in text nodes

--- a/style/main.css
+++ b/style/main.css
@@ -56,6 +56,7 @@ hpu-puzzle.hpu-puzzle--dragging {
 .hpu-puzzle__text {
   color: #dadada;
   font-weight: bold;
+  white-space: pre-wrap;
 }
 
 .hpu-puzzle__children {
@@ -100,6 +101,6 @@ html {
 }
 
 hpu-preview {
-  display: block;
+  display: inline-block;
   margin-bottom: 20px;
 }
